# quilto

./: .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  llm-config.yaml  pyproject.toml  pyrightconfig.json
_bmad-output/: academic-framing-draft.md  architecture-draft.md  next-steps-roadmap.md  project-context.md  research-questions.md  swealog-bmad-context.md  swealog-project-context-v2.md  test-design-system.md  testing-strategy-draft.md
_bmad-output/analysis/: brainstorming-session-2025-12-31.md
_bmad-output/implementation-artifacts/: 1-6-generate-synthetic-test-data-with-variations.md  1-7-create-test-fixtures-and-accuracy-runner.md  epic-1-retro-2026-01-09.md  sprint-status.yaml
_bmad-output/planning-artifacts/: agent-system-design.md  architecture.md  dev-workflow.md  epics.md  implementation-readiness-report-2026-01-08.md  prd-quilto.md  prd-swealog.md  project-identity.md  state-machine-diagram.md
_bmad-output/supplementary/: paper-lookup-guide.md  paper-recommendations.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
scripts/: convert_obsidian.py  generate_expected_outputs.py  generate_synthetic_entries.py  manual_test.py  story-pipeline.sh
tests/: __init__.py  conftest.py  test_conftest_fixtures.py  test_generate_expected_outputs.py
tests/accuracy/: __init__.py  comparators.py  mock_parser.py  test_comparators.py  test_parser_accuracy.py
tests/corpus/: README.md  __init__.py  exercise_equivalences.yaml  test_edge_cases.py  test_expected_schemas.py  test_human_entries.py  (+3 more)
(+580 files in other folders)
